--- a/ProjectManagement/src/main/resources/templates/menu_bar_student.html
+++ b/ProjectManagement/src/main/resources/templates/menu_bar_student.html
@@ -6,17 +6,11 @@
     </div>
 </div>
 <div class="notification">
-    <button type="button" class="notification-button" onclick="toggleNomenu_bar_studenttifications()">
+    <!-- Add data-bs-toggle and data-bs-target to your notification button -->
+    <button type="button" class="notification-button" data-bs-toggle="modal" data-bs-target="#notificationModal">
         <i class="fas fa-bell"></i>
-        <span id="badge" class="badge"></span> <!-- Remove the hardcoded number of notifications -->
+        <span id="badge" class="badge"></span>
     </button>
-    <div id="notification-inbox" class="notification-inbox">
-        <!-- Add your notifications here -->
-        <p>Notification 1</p>
-        <p>Notification 2</p>
-        <p>Notification 3</p>
-        <!-- etc. -->
-    </div>
 </div>
 <ul class="nav nav-pills flex-column mb-auto">
     <li class="nav-item">
@@ -79,3 +73,39 @@
     </li>
 
 </ul>
+<div class="modal fade" tabindex="-1" id="notificationModal">
+    <div id="notificationModalContent"></div>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Notification</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>xxsx</p>
+                <div th:each="noti : ${notificationList}">
+                    <p th:text="${noti.subject_id}"></p>
+                    <p th:text="${noti.username}"></p>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    // Add a click event handler to the notification button
+    // $(document).ready(function() {
+    //     $("#notificationButton").click(function() {
+    //         // Load and show the notification modal content
+    //         $("#notificationModalContent").load("/notification.html", function() {
+    //             $('#notificationModal').modal('show');
+    //         });
+    //     });
+    // });
+   
+
+</script>
