--- a/ProjectManagement/src/main/resources/templates/menu_bar_student.html
+++ b/ProjectManagement/src/main/resources/templates/menu_bar_student.html
@@ -75,19 +75,32 @@
 </ul>
 <div class="modal fade" tabindex="-1" id="notificationModal">
     <div id="notificationModalContent"></div>
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Notification</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>xxsx</p>
                 <div th:each="noti : ${notificationList}">
-                    <p th:text="${noti.subject_id}"></p>
-                    <p th:text="${noti.username}"></p>
+                    <div class="notification-item">
+                        <div class="row"><div class="col-9">
+                        <p class="notification-text">
+                            <strong th:text="${noti.username}"></strong>
+                            <span>has requested to join the group</span>
+                            <strong th:text="${noti.subject_id}"></strong>
+                            <p class="request_id"th:text=${noti.request_id} ></p>
+                            <p class="group_id"th:text=${noti.group_id} ></p>
+                        </p>
+                    </div>
+                    <div class="col-3 text-end ">
+                        <button class="btn btn-primary" onclick="acceptRequest(this)">Accept</button>
+                        <button class="btn btn-danger" onclick="rejectRequest(this)">Reject</button>
+                        </div></div>
+                    </div>
                 </div>
             </div>
+            
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
@@ -97,15 +110,70 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-    // Add a click event handler to the notification button
-    // $(document).ready(function() {
-    //     $("#notificationButton").click(function() {
-    //         // Load and show the notification modal content
-    //         $("#notificationModalContent").load("/notification.html", function() {
-    //             $('#notificationModal').modal('show');
-    //         });
-    //     });
-    // });
    
+   function acceptRequest(element){
+        var request_id = $(element).parent().parent().find('.request_id').text();
+        var group_id = $(element).parent().parent().find('.group_id').text();
+        console.log(request_id , group_id);
+        $.ajax({
+            url: "/acceptrequest",
+            type: "POST",
+            data: {
+                request_id : request_id,
+                group_id: group_id
+            },
+            success: function (response) {
+                swal.fire({
+                    title: response,
+                    text: "Request accepted",
+                    icon: "success",
+                    button: "OK",
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        //reload page
+                        location.reload();
+                    
+                    }
+                });
+            },
+            error: function (response) {
+                console.log(response);
+            }
+        });
+        console.log('Request accepted'); 
+    }
+    
+
+    function rejectRequest(element) {
+        var request_id = $(element).parent().parent().find('.request_id').text();
+        var group_id = $(element).parent().parent().find('.group_id').text();
+        console.log(request_id , group_id);
+        $.ajax({
+            url: "/rejectrequest",
+            type: "POST",
+            data: {
+                request_id : request_id,
+                group_id: group_id
+            },
+            success: function (response) {
+                swal.fire({
+                    title: "Success",
+                    text: "Request rejected",
+                    icon: "success",
+                    button: "OK",
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        //delete row
+                        $(element).parent().parent().parent().remove();
+                    }
+                });
+            },
+            error: function (response) {
+                console.log(response);
+            }
+        });
+        console.log('Request rejected'); 
+    }
+
 
 </script>
