Sort User on staff page
เอาไปแก้constuctเอาจ้า

--- a/ProjectManagement/src/main/resources/static/styles.css
+++ b/ProjectManagement/src/main/resources/static/styles.css
@@ -266,3 +266,13 @@ body {
 .student {
     font-weight: bold;
 }
+.sortGroup {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    right: 10;
+    margin-top: 20px;
+
+    width: 250px;
+    margin-left: auto;
+}
